# ChangeLog for net-p2p/gtk-gnutella
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/gtk-gnutella/ChangeLog,v 1.105 2010/05/25 05:51:24 graaff Exp $

  25 May 2010; Hans de Graaff <graaff@gentoo.org>
  -gtk-gnutella-0.96.6.ebuild:
  Remove old version.

  24 May 2010; Pacho Ramos <pacho@gentoo.org> gtk-gnutella-0.96.8.ebuild:
  stable amd64, bug 316879

  23 May 2010; <nixnut@gentoo.org> gtk-gnutella-0.96.8.ebuild:
  ppc stable #316879

  24 May 2010; Raúl Porcel <armin76@gentoo.org> gtk-gnutella-0.96.6.ebuild,
  gtk-gnutella-0.96.8.ebuild:
  Drop alpha/sparc keyword

  10 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gtk-gnutella-0.96.8.ebuild:
  x86 stable wrt bug #316879

  22 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  -gtk-gnutella-0.96.6-r1.ebuild, -gtk-gnutella-0.96.7.ebuild:
  Remove old versions.

*gtk-gnutella-0.96.8 (22 Mar 2010)

  22 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  +gtk-gnutella-0.96.8.ebuild:
  Version bump with important bug fixes.

  17 Mar 2010; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  Update metadata.xml to list myself as primary maintainer.

*gtk-gnutella-0.96.7 (17 Mar 2010)

  17 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  +gtk-gnutella-0.96.7.ebuild, +files/gtk-gnutella-0.96.7-ldflags.patch:
  Version bump.

*gtk-gnutella-0.96.6-r1 (13 Jul 2009)

  13 Jul 2009; Hans de Graaff <graaff@gentoo.org>
  +gtk-gnutella-0.96.6-r1.ebuild:
  Switch to EAPI-"2". Add gtk USE flag so taht we can also support building
  without a GUI at all. Move configuration into its own phase. Use the build
  script only for configuration so that we can use emake and thus support
  parallel compilation.

  13 Jul 2009; Hans de Graaff <graaff@gentoo.org>
  -gtk-gnutella-0.96.5.ebuild:
  Remove old version.

  20 May 2009; nixnut <nixnut@gentoo.org> gtk-gnutella-0.96.6.ebuild:
  ppc stable #268646

  14 May 2009; Markus Meier <maekke@gentoo.org> gtk-gnutella-0.96.6.ebuild: