@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/gtk-gnutella
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/gtk-gnutella/ChangeLog,v 1.105 2010/05/25 05:51:24 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/gtk-gnutella/ChangeLog,v 1.106 2010/08/22 07:59:56 graaff Exp $
+
+  22 Aug 2010; Hans de Graaff <graaff@gentoo.org>
+  gtk-gnutella-0.96.8.ebuild:
+  Avoid unneeded probe for nawk. Fixes bug 333833.
 
   25 May 2010; Hans de Graaff <graaff@gentoo.org>
   -gtk-gnutella-0.96.6.ebuild:
